--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  background-color: #d6e9e1;
+  color: #3c0648;
+  font-family: sans-serif;
+ }
+
+ img {
+  width: 200px;
+ }
+
+ header {
+  text-align: center;
+ }
+ 
