--- a/app/views/prelaunch/index.html.erb
+++ b/app/views/prelaunch/index.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <%= image_tag "cheeselove-logo.jpeg", alt: "Cheese Love logo" %>
+  <%= image_tag "cheeselove-logo.jpg", alt: "Cheese Love logo" %>
   <h1>Cheese Love</h1>
   <p class="tagline">Discover, share, and remember great cheese</p>
 </header>
