--- a/app/views/prelaunch/index.html.erb
+++ b/app/views/prelaunch/index.html.erb
@@ -1,19 +1,27 @@
-<header class="row align-items-center text-center">
-  <div class="col">
-    <%= image_tag "cheeselove-logo.jpg", alt: "Cheese Love logo", width: 296 %>
-    <h1>Cheese Love</h1>
-    <p class="tagline">Discover, share, and remember great cheese</p>
+<header>
+  <div class="row align-items-center justify-content-center">
+    <div class="col-2">
+      <%= image_tag "cheese-love-logo-transparent.png", class: "img-fluid", alt: "Cheese Love logo" %>
+    </div>
+    <div class="col-sm-4 text-center">
+      <h1>Cheese Love</h1>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8 text-center">
+      <h2 class="tagline">Discover, share, and remember great cheese</p>
+    </div>
   </div>
 </header>
 
-<div class="row align-items-center text-center">
-  <div class="col">
+<div class="row align-items-center text-center justify-content-center">
+  <div class="col-8">
     <p>Sign up below to receive one email when we launch.</p>
   </div>
 </div>
 
-<div class="row align-items-center">
-  <div class="col">
+<div class="row align-items-center justify-content-center">
+  <div class="col-8">
     <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
     <div id="mc_embed_signup">
