--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,7 +15,7 @@
  */
 
 body {
-  background-color: #d6e9e1;
+  background-color: #fbdbfe;
   background-image: url(<%= asset_path("gradient-background.png") %>);
   background-position: top center;
   color: #3c0648;
