Use CSS gradient instead of large background image

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,9 +15,8 @@
  */
 
 body {
-  background-color: #fbdbfe;
-  background-image: url(<%= asset_path("gradient-background.png") %>);
-  background-position: top center;
+  background: rgb(220,166,254);
+  background: linear-gradient(33deg, rgba(220,166,254,1) 0%, rgba(253,242,255,1) 49%, rgba(111,195,254,1) 100%) fixed;
   color: #3c0648;
   font-family: 'Finlandica', sans-serif;
 }
