--- a/app/views/prelaunch/index.html.erb
+++ b/app/views/prelaunch/index.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="row align-items-center justify-content-center">
     <div class="col-2">
-      <%= image_tag "cheese-love-logo-transparent.png", class: "img-fluid", alt: "Cheese Love logo" %>
+      <%= image_tag "cheese-love-logo-transparent.svg", class: "img-fluid", alt: "Cheese Love logo" %>
     </div>
     <div class="col-sm-4 text-center">
       <h1>Cheese Love</h1>
