Improve responsive layout

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -25,6 +25,10 @@ h1 {
   font-family: 'Calistoga', cursive;
 }
 
+.signup p {
+  margin-bottom: 0;
+}
+
 #mc_embed_signup {
   background: transparent;
   clear: left;
@@ -42,4 +46,9 @@ h1 {
 
 #mc_embed_signup .helper_text {
   background: transparent !important;
+}
+
+#mc_embed_signup .foot,
+#mc_embed_signup .mc-field-group {
+  width: 100% !important;
 }
