--- a/app/views/prelaunch/index.html.erb
+++ b/app/views/prelaunch/index.html.erb
@@ -1,27 +1,25 @@
 <header>
-  <div class="row align-items-center justify-content-center">
-    <div class="col-2">
+  <div class="row align-items-center justify-content-center mt-4">
+    <div class="col-4 col-md-2">
       <%= image_tag "cheese-love-logo-transparent.svg", class: "img-fluid", alt: "Cheese Love logo" %>
     </div>
-    <div class="col-sm-4 text-center">
-      <h1>Cheese Love</h1>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-8 text-center">
-      <h2 class="tagline">Discover, share, and remember great cheese</p>
+    
+
+    <div class="col-md-6 col-12 text-md-start text-center">
+      <h1 class="display-1">Cheese&nbsp;Love</h1>
+      <p class="h2 tagline">Discover, share, and remember great&nbsp;cheese</p>
     </div>
   </div>
 </header>
 
-<div class="row align-items-center text-center justify-content-center">
-  <div class="col-8">
-    <p>Sign up below to receive one email when we launch.</p>
+<div class="signup row align-items-center text-md-start text-center justify-content-center mt-4">
+  <div class="col-md-8 col-12">
+    <p>Sign up below to receive one email when we&nbsp;launch.</p>
   </div>
 </div>
 
 <div class="row align-items-center justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-12">
     <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
     <div id="mc_embed_signup">
