--- a/app/views/prelaunch/index.html.erb
+++ b/app/views/prelaunch/index.html.erb
@@ -52,3 +52,28 @@
     <!--End mc_embed_signup-->
   </div>
 </div>
+
+<footer class="row align-items-top justify-content-center pt-4 border-top text-body-secondary">
+  <div class="col-md-6 col-12 text-md-start text-center">
+    <p>
+      <small>
+        Made with love by <a href="https://twitter.com/ameliatucker">Amelia</a> and <a href="https://feedmechocolate.com/">Chris</a>.
+        ©&nbsp;2023&nbsp;<a href="http://odegy.com/">Odegy&nbsp;Ltd</a>
+      </small>
+    </p>
+    <p>
+      <small>
+        Cheese Love is <a href="https://github.com/cheeseloveapp">open source, free&nbsp;software</a>.
+        <a href="https://ko-fi.com/cheeselove">Donate</a>&nbsp;towards our hosting and publishing&nbsp;costs.
+      </small>
+    </p>
+  </div>
+  <div class="col-md-2 col-12 text-md-end text-center">
+    <p>
+      <a href="https://twitter.com/cheeseloveapp"><i class="bi-twitter"></i></a>
+      <a href="https://instagram.com/cheeseloveapp"><i class="bi-instagram"></i></a>
+      <a href="https://facebook.com/cheeseloveapp"><i class="bi-facebook"></i></a>
+      <a href="https://toot.io/@cheeseloveapp"><i class="bi-mastodon"></i></a>
+    </p>
+  </div>
+</footer>
